--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+/* --------- */
+/* Reset */
+/* --------- */
+
 *,
 *::before,
 *::after {
@@ -6,9 +10,12 @@
 
 html {
     font-family: 'Antonio', sans-serif;
-    /* font-family: 'Spartan', sans-serif; */
     color: #fff;
     font-weight: 400;
+}
+
+h3, h4, button, p {
+    font-family: 'Spartan', sans-serif;
 }
 
 body {
@@ -18,10 +25,69 @@ body {
     background-size: cover;
 }
 
+button {
+    text-transform: uppercase;
+    font-size: 9px;
+    color: #838391;
+    font-weight: bold;
+    background-color: transparent;
+    letter-spacing: 2px;
+    border: none;
+    padding: 2.5em 0;
+    cursor: pointer;
+}
+
+/* --------- */
+/* Header */
+/* --------- */
+
 .header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid #38384f;
     padding-inline: 1.5em;
+}
+
+.main-body {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto 312px auto;
+    grid-template-areas: 
+        "buttons buttons buttons"
+        "....... planet ........"
+        "info info info";
+}
+
+.info-buttons {
+    display: flex;
+    justify-content: space-around;
+    border-bottom: 1px solid #38384f;
+    grid-area: buttons;
+}
+
+.img-planet {
+    grid-area: planet;
+    align-self: center;
+}
+
+.info {
+    grid-area: info;
+    text-align: center;
+    padding-inline: 2em;
+}
+
+.wiki-link {
+    color: #838391;
+    font-weight: bold;
+}
+
+.title {
+    font-size: 40px;
+}
+
+.description {
+    font-size: 11px;
+    line-height: 22px;
+    font-weight: 400;
 }
