--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,7 @@ html {
 
 body {
     margin: 0;
-    background: url(./starter-code/assets/background-stars.svg);
+    background: url(background-stars.svg);
     background-color: #070724;
     background-size: cover;
 }
@@ -41,7 +41,9 @@ button {
     cursor: pointer;
 }
 
-.container { height: 100vh; }
+.container { 
+    height: 100vh;
+ }
 
 /* --------- */
 /* Header */
@@ -141,7 +143,7 @@ button {
 @media (min-width: 480px) {
     .main-body {
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: 470px auto auto;
+        grid-template-rows: 60% auto auto;
         grid-template-areas: 
             "planet planet"
             "info buttons"
@@ -163,6 +165,10 @@ button {
         gap: 20px;
     }
 
+    .info-buttons button {
+        border: 1px solid #38384f;
+    }
+
     .img-planet {
         justify-self: center;
     }
@@ -170,6 +176,7 @@ button {
     .footer {
         display: flex;
         gap: 1em;
+        padding-inline: 0;
     }
 
     .footer-info h3 { 
@@ -206,8 +213,9 @@ button {
     }
 
     .info {
-        align-self: flex-end;
-        padding-inline: 0;
+        display: flex;
+        flex-direction: column;
+        padding: 0;
     }
 
     .info-buttons {
@@ -217,16 +225,8 @@ button {
         gap: 20px;
     }
 
-    .info-buttons button {
-        border: 1px solid #38384f;
-    }
-
     .img-planet {
         justify-self: center;
-    }
-
-    .footer {
-        gap: 1em;
     }
 
     .footer-info {
