--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,14 @@ html {
     font-family: 'Antonio', sans-serif;
     color: #fff;
     font-weight: 400;
+    --clr-mercury: #419ebb;
+    --clr-venus: #eda249;
+    --clr-earth: #6f2ed6;
+    --clr-mars: #d14c32;
+    --clr-jupiter: #d83a34;
+    --clr-saturn: #cd5120;
+    --clr-uranus: #1ec2a4;
+    --clr-neptune: #2d68f0;
 }
 
 body {
@@ -54,6 +62,49 @@ button {
     border-bottom: 1px solid #38384f;
     padding-inline: 1.5em;
 }
+
+.header-navigation-planets {
+    display: none;
+}
+
+.mobile-nav a {
+    display: inline-block;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 15px;
+    font-weight: 700;
+    letter-spacing: 1.36px;
+    color: #fff;
+    margin-right: auto;
+    padding: 2em 10em 2em 2em;
+}
+
+.mobile-nav span {
+    display: inline-block;
+    position: fixed;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    margin-right: 20px;
+}
+
+.mercury-dot { background-color: var(--clr-mercury);}
+.venus-dot { background-color: var(--clr-venus);}
+.earth-dot { background-color: var(--clr-earth);}
+.mars-dot { background-color: var(--clr-mars);}
+.jupiter-dot { background-color: var(--clr-jupiter);}
+.saturn-dot { background-color: var(--clr-saturn);}
+.uranus-dot { background-color: var(--clr-uranus);}
+.neptune-dot { background-color: var(--clr-neptune);}
+
+.mobile-nav div {
+    display: flex;
+    width: 90%;
+    margin: 0 auto;
+    align-items: center;
+    border-bottom: 1px solid #38384f;
+}
+
 
 /* --------- */
 /* Main body */
@@ -135,13 +186,6 @@ button {
     line-height: 22px;
     font-weight: 400;
 }
-
-.header-navigation-planets {
-    display: none;
-}
-
-
-
 
 /* --------- */
 /* 480 and above tablet size query */
