--- a/src/style.css
+++ b/src/style.css
@@ -64,7 +64,7 @@ button {
 }
 
 .header-navigation-planets {
-    display: block;
+    display: none;
     flex-direction: column;
     position: absolute;
     background-color: #070724;
