--- a/src/style.css
+++ b/src/style.css
@@ -94,7 +94,7 @@ button {
     margin-right: 10px;
 }
 
-.mercury-dot { background-color: var(-jupiterrcury); }
+.mercury-dot { background-color: var(--clr-mercury); }
 .venus-dot { background-color: var(--clr-venus); }
 .earth-dot { background-color: var(--clr-earth); }
 .mars-dot { background-color: var(--clr-mars); }
@@ -103,7 +103,7 @@ button {
 .uranus-dot { background-color: var(--clr-uranus); }
 .neptune-dot { background-color: var(--clr-neptune); }
 
-.mercur:hover
+.mercury:hover,
 .mercury:focus { border-bottom: 4px solid var(--clr-mercury);}
 .venus:hover,
 .venus:focus { border-bottom: 4px solid var(--clr-venus);}
@@ -136,11 +136,11 @@ button {
         "footer footer footer";
 }
 
-.info-buttons {
+.BS-info-buttons {
+    grid-area: buttons;
     display: flex;
     justify-content: space-around;
     border-bottom: 1px solid #38384f;
-    grid-area: buttons;
 }
 
 .img-planet {
@@ -227,15 +227,15 @@ button {
     .jupiter:hover,
     .saturn:hover,
     .uranus:hover,
-    .neptune:hover { background-color: #838391;}
-    .mercury:focus { background-color: var(--clr-mercury);}
-    .venus:focus { background-color: var(--clr-venus);}
-    .earth:focus { background-color: var(--clr-earth);}
-    .mars:focus { background-color: var(--clr-mars);}
-    .jupiter:focus { background-color: var(--clr-jupiter);}
-    .saturn:focus { background-color: var(--clr-saturn);}
-    .uranus:focus { background-color: var(--clr-uranus);}
-    .neptune:focus { background-color: var(--clr-neptune);}
+    .neptune:hover { background-color: #838391; border-bottom: none;}
+    .mercury:focus { background-color: var(--clr-mercury); border-bottom: none;}
+    .venus:focus { background-color: var(--clr-venus); border-bottom: none;}
+    .earth:focus { background-color: var(--clr-earth); border-bottom: none;}
+    .mars:focus { background-color: var(--clr-mars); border-bottom: none;}
+    .jupiter:focus { background-color: var(--clr-jupiter); border-bottom: none;}
+    .saturn:focus { background-color: var(--clr-saturn); border-bottom: none;}
+    .uranus:focus { background-color: var(--clr-uranus); border-bottom: none;}
+    .neptune:focus { background-color: var(--clr-neptune); border-bottom: none;}
 
     .header {
         display: flex;
@@ -279,6 +279,9 @@ button {
         padding-left: 0;
         font-family: spartan;
         margin-top: 35px;
+        flex-direction: column;
+        justify-content: unset;
+        border-bottom: none;
     }
 
     .BS-info-buttons button {
@@ -385,13 +388,6 @@ button {
         display: flex;
         flex-direction: column;
         padding: 0;
-    }
-
-    .info-buttons {
-        flex-direction: column;
-        border-bottom: none;
-        justify-content: center;
-        gap: 20px;
     }
 
     .img-planet {
